RESOLVED FIXED131778
[New Multicolumn] Column sets below spanners don't repaint properly.
https://bugs.webkit.org/show_bug.cgi?id=131778
Summary [New Multicolumn] Column sets below spanners don't repaint properly.
Dave Hyatt
Reported 2014-04-16 17:27:09 PDT
Column sets below a column spanner don't repaint properly at all. Nothing works. Links don't work. Selection doesn't work, etc.
Attachments
Patch (4.12 KB, patch)
2014-04-17 10:50 PDT, Dave Hyatt
bdakin: review+
Dave Hyatt
Comment 1 2014-04-17 10:50:20 PDT
Dave Hyatt
Comment 2 2014-04-17 10:54:18 PDT
Fix landed in r167439.
Note You need to log in before you can comment on or make changes to this bug.